# TheSolarSystem

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/gui/: canvans.cpp  canvans.h  settings.h  window.cpp  window.h
src/physics/: distance.h  object.cpp  object.h  physics.cpp  physics.h  vec2.h
src/physics/space/: moon.cpp  moon.h  planet.cpp  planet.h
src/resources/: data.h
